--- a/mq.style.css
+++ b/mq.style.css
@@ -4,15 +4,763 @@
 /*max-width: daquele valor pra baixo
 min-width: de cima até aquele valor*/
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+    
+    .principal div#div3{
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+
+    header .principal h1.h1 {
+        padding-top: 40px;
+        padding-bottom: 10px;
+        font-size: 2.4rem;
+    }
+
+    header img#imgprincipal {
+        width: 260px;
+        height: 280px;
+        z-index: -1;
+        margin: auto;
+        display: block;
+        border: 2px solid lightgreen;
+        border-radius: 5px;
+        margin-top: 10px;
+    }  
+
+    div#div1 {
+        padding-right: 180px;
+    }
+
+    div#div3 {
+        text-align: center;
+    }
+
+
+    header img {
+        width: 22px;
+        margin-top: 15px;
+    }
+    
+    hr {
+        width: 450px;
+        margin: auto;
+        display: block;
+        margin-top: 120px;
+    }
+
+    header p {
+        font-size: 1.0em;
+        text-align: justify;
+        color: rgba(255, 255, 255, 0.966);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 40px;
+        padding-left: 40px;
+        width: 380px;
+    }
+
+    h2 {
+        font-size: 1.9em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: center;
+        padding-left: 30px;
+        padding-right: 0px;
+        padding-top: 0px;
+    }
+
+    header h1 {
+        font-size: 2.6em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-top: 20px;
+        padding-right: 2px;
+    }
+
+    h3 {
+        color: white;
+        font-size: 1.4em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        text-align: center;
+        padding-top: 40px;
+    }
+
+}   
+
 
 @media screen and (min-width: 768px) and (max-width: 992px){
+    div.principal {
+        display: flex;
+    }
+
+    div.principal p {
+        text-align: justify;
+    }
+
+    #div1 {
+        display: flex;
+        position: absolute;
+        left: 60px;
+        top: 143px;
+    }
+
+
+    header #div1 img {
+        width: 33px;
+        padding-top: 20px;
+        padding-left: 20px;
+        margin-right: 5px;
+    }
+
+    header img#imgprincipal {
+        width: 300px;
+        height: 520px;
+        z-index: -1;
+        position: absolute;
+        border-radius: 20px; 
+        top: 140px;
+        left: 50px;
+    }
+
+
+    header h1 {
+        font-size: 2.9em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-top: 135px;
+        padding-left: 70px;
+        padding-right: 11px;
+    }
+
+    header .principal h1.h1 {
+        padding-top: 50px;
+        padding-left: 55px;
+        padding-bottom: 88px;
+        font-size: 3.3rem;
+    }
     
+    h2 {
+        font-size: 2.5em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: right;
+        padding-right: 20px;
+        padding-top: 2px;
+    }
+    
+    header p {
+        font-size: 1.4em;
+        text-align: right;
+        color: rgb(255, 255, 255);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 20px;
+        padding-left: 70px;
+        width: 335px;
+    }
+    
+    h3 {
+        font-size: 1.5em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        padding-top: 30px;
+        padding-right: 125px;
+    }
+
+    hr {
+        width: 700px;
+        margin: auto;
+        display: block;
+        margin-top: 120px;
+    }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 200px 200px 170px;
+        grid-auto-rows: 200px 180px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+        font-size: 2.1em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 1.2em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
+
+    div#tabela2 {
+        display: grid;
+        justify-content: space-evenly;
+        grid-template-columns: 450px 160px;
+        grid-auto-rows: 180px 180px;
+    }
+
+    div#tabela2 h1 {
+        font-size: 3.6rem;
+        color: rgba(255, 255, 255, 0.916);
+    }
+
+
+    b.b3 {
+        color: rgba(255, 255, 255, 0.916);
+        font-size: 1.4rem;    
+    }
+
+    #b {
+        padding-top: 55px;
+    }
+
+    aside div#imagens h1 {
+        color: rgba(255, 255, 255, 0.93);
+        font-size: 1.2em;
+        padding: 10px;
+    }
+        
+
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.0em;
+        padding: 5px;
+        padding-bottom: 80px;
+        text-align: center;
+    }
+
+    p.linha5, p.linha6 , p.linha7, p.linha8 {
+        padding-bottom: 20px;
+    }
+    
+    img#linha1, img#linha2, img#linha3, img#linha4 {
+        height: 200px;
+        width: 300px;
+        border-radius: 10px;
+        border: 2px solid lightgreen;
+        margin: auto;
+        display: block;
+    }
+
+    .linha1, .linha2 {
+        text-align: center;
+        margin: auto;
+        display: block;    
+}
+
+    #imagens {
+        display: flex;
+        text-align: center;
+        margin: auto;
+    }
+
+    #img {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+    div#geral {
+        text-align: left;
+    }
+
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 40px;
+    }
+
+    .footer .imgextra {
+        border-radius: 20px;
+        width: 240px;
+        height: 300px;
+        margin-left: 20px;
+        padding-top: 10px;
+        padding-right: 40px;
+    }
+
+
+    footer h1 {
+        color: rgba(247, 247, 247, 0.966);
+        font-size: 3.8em;
+        font-family: 'Barlow', sans-serif;
+        margin: 0px;
+        text-align: left;
+        padding-bottom: 15px;
+    }
+    
+    footer #geral p {
+        color: rgba(255, 255, 255, 0.907);
+        font-size:  1.5rem;
+        font-family: 'Barlow', sans-serif;
+        text-align: left;
+        padding-left: 5px;
+        width: 300px;
+    }
+
+    #img img {
+        width: 38px;
+        padding: 0px;
+        margin-left: 10px;
+    } 
+
+    .imgs {
+        text-align: left;
+        padding-top: 35px;
+        padding-right: 10px;
+    }
+
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
+    div.principal {
+        display: flex;
+    }
 
+    div.principal p {
+        text-align: justify;
+    }
+
+    #div1 {
+        display: flex;
+        position: absolute;
+        left: 100px;
+        top: 185px;
+    }
+
+
+    header #div1 img {
+        width: 40px;
+        padding-top: 20px;
+        padding-left: 20px;
+        margin-right: 5px;
+    }
+
+    header img#imgprincipal {
+        width: 340px;
+        height: 580px;
+        z-index: -1;
+        position: absolute;
+        border-radius: 20px; 
+        top: 180px;
+        left: 90px;
+    }
+
+
+    header h1 {
+        font-size: 3.4em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-top: 190px;
+        padding-left: 130px;
+    }
+
+    header .principal h1.h1 {
+        padding-top: 50px;
+        padding-left: 85px;
+        padding-bottom: 88px;
+        font-size: 3.5rem;
+    }
+    
+    h2 {
+        font-size: 3.1em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: right;
+        padding-left: 148px;
+        padding-top: 2px;
+    }
+    
+    header p {
+        font-size: 1.6em;
+        text-align: right;
+        color: rgb(255, 255, 255);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 20px;
+        padding-left: 150px;
+        width: 400px;
+    }
+    
+    h3 {
+        font-size: 1.4em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        padding-top: 30px;
+        padding-right: 125px;
+    }
+
+    hr {
+        width: 890px;
+        margin: auto;
+        display: block;
+        margin-top: 120px;
+    }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 200px 200px 170px;
+        grid-auto-rows: 200px 180px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+        font-size: 2.1em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 1.2em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
+
+    div#tabela2 {
+        display: grid;
+        justify-content: space-evenly;
+        grid-template-columns: 550px 160px;
+        grid-auto-rows: 180px 180px;
+    }
+
+    div#tabela2 h1 {
+        font-size: 3.6rem;
+        color: rgba(255, 255, 255, 0.916);
+    }
+
+
+    b.b3 {
+        color: rgba(255, 255, 255, 0.916);
+        font-size: 1.4rem;    
+    }
+
+    #b {
+        padding-top: 55px;
+    }
+
+    aside div#imagens h1 {
+        color: rgba(255, 255, 255, 0.93);
+        font-size: 1.4em;
+        padding: 10px;
+    }
+        
+
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.3em;
+        padding: 5px;
+        padding-bottom: 80px;
+        text-align: center;
+    }
+
+    p.linha5, p.linha6 , p.linha7, p.linha8 {
+        padding-bottom: 20px;
+    }
+    
+    img#linha1, img#linha2, img#linha3, img#linha4 {
+        height: 300px;
+        width: 400px;
+        border-radius: 10px;
+        border: 2px solid lightgreen;
+        margin: auto;
+        display: block;
+    }
+
+    .linha1, .linha2 {
+        text-align: center;
+        margin: auto;
+        display: block;    
+}
+
+    #imagens {
+        display: flex;
+        text-align: center;
+        margin: auto;
+    }
+
+    #img {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+    div#geral {
+        text-align: left;
+    }
+
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 40px;
+    }
+
+    .footer .imgextra {
+        border-radius: 20px;
+        width: 240px;
+        height: 300px;
+        margin-left: 20px;
+        padding-top: 10px;
+        padding-right: 95px;
+    }
+
+
+    footer h1 {
+        color: rgba(247, 247, 247, 0.966);
+        font-size: 3.8em;
+        font-family: 'Barlow', sans-serif;
+        margin: 0px;
+        text-align: left;
+        padding-bottom: 15px;
+    }
+    
+    footer #geral p {
+        color: rgba(255, 255, 255, 0.907);
+        font-size:  1.7rem;
+        font-family: 'Barlow', sans-serif;
+        text-align: left;
+        padding-left: 5px;
+        width: 320px;
+    }
+
+    #img img {
+        width: 38px;
+        padding: 0px;
+        margin-left: 10px;
+    } 
+
+    .imgs {
+        text-align: left;
+        padding-top: 35px;
+        padding-right: 10px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
+    div.principal {
+        display: flex;
+    }
 
+    div.principal p {
+        text-align: justify;
+    }
+
+    #div1 {
+        display: flex;
+        position: absolute;
+        left: 215px;
+        top: 190px;
+    }
+
+
+    header #div1 img {
+        width: 36px;
+        padding-top: 20px;
+        padding-left: 20px;
+        margin-right: 5px;
+    }
+
+    header img#imgprincipal {
+        width: 360px;
+        height: 520px;
+        z-index: -1;
+        position: absolute;
+        border-radius: 20px; 
+        top: 180px;
+        left: 210px;
+    }
+
+
+    header h1 {
+        font-size: 4.2em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif; 
+        text-align: center;
+        padding-top: 190px;
+        padding-left: 226px;
+    }
+
+    header .principal h1.h1 {
+        padding-top: 80px;
+        padding-left: 215px;
+        padding-bottom: 65px;
+        font-size: 3.5rem;
+    }
+    
+    h2 {
+        font-size: 3.9em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: right;
+        padding-right: 37px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    header p {
+        font-size: 1.5em;
+        text-align: right;
+        color: rgb(255, 255, 255);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 20px;
+        padding-left: 290px;
+        padding-right: 60px;
+        width: 500px;
+    }
+    
+    h3 {
+        font-size: 1.8em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        padding-top: 45px;
+        padding-left: 0px;
+        padding-right: 85px;
+    }
+
+    hr {
+        width: 1150px;
+        margin: auto;
+        display: block;
+        margin-top: 170px;
+    }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 200px 200px 170px;
+        grid-auto-rows: 200px 180px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+        font-size: 2.1em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 1.2em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
+
+    div#tabela2 {
+        display: grid;
+        justify-content: space-evenly;
+        grid-template-columns: 850px 160px;
+        grid-auto-rows: 180px 180px;
+    }
+
+    div#tabela2 h1 {
+        font-size: 3.9rem;
+        color: rgba(255, 255, 255, 0.916);
+    }
+
+
+    b.b3 {
+        color: rgba(255, 255, 255, 0.916);
+        font-size: 1.5rem;    
+    }
+
+    #b {
+        padding-top: 65px;
+    }
+
+    aside div#imagens h1 {
+        color: rgba(255, 255, 255, 0.93);
+        font-size: 1.5em;
+        padding: 10px;
+    }
+        
+
+    aside div#imagens p {
+        color: rgba(255, 255, 255, 0.797);
+        font-size: 1.4em;
+        padding: 5px;
+        padding-bottom: 80px;
+        text-align: center;
+    }
+
+    p.linha5, p.linha6 , p.linha7, p.linha8 {
+        padding-bottom: 20px;
+    }
+    
+    img#linha1, img#linha2, img#linha3, img#linha4 {
+        height: 300px;
+        width: 400px;
+        border-radius: 10px;
+        border: 2px solid lightgreen;
+        margin: auto;
+        display: block;
+    }
+
+    .linha1, .linha2 {
+        text-align: center;
+        margin: auto;
+        display: block;    
+}
+
+    #imagens {
+        display: flex;
+        text-align: center;
+        margin: auto;
+    }
+
+    #img {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
+    div#geral {
+        text-align: left;
+    }
+
+    footer {
+        background-color: rgb(48, 47, 47);
+        padding: 60px;
+    }
+
+    .footer .imgextra {
+        border-radius: 30px;
+        width: 250px;
+        height: 280px;
+        margin-left: 10px;
+        padding-top: 10px;
+        padding-right: 180px;
+    }
+
+
+    footer h1 {
+        color: rgba(247, 247, 247, 0.966);
+        font-size: 3.8em;
+        font-family: 'Barlow', sans-serif;
+        margin: 0px;
+        text-align: left;
+        padding-bottom: 35px;
+    }
+    
+    footer #geral p {
+        color: rgba(255, 255, 255, 0.907);
+        font-size:  1.7rem;
+        font-family: 'Barlow', sans-serif;
+        text-align: left;
+        padding-left: 5px;
+        width: 700px;
+    }
+
+    #img img {
+        width: 38px;
+        padding: 0px;
+        margin-left: 10px;
+    } 
+
+    .imgs {
+        text-align: left;
+        padding-top: 35px;
+        padding-right: 10px;
+    }
 }
