--- a/mq.style.css
+++ b/mq.style.css
@@ -8,10 +8,14 @@ min-width: de cima até aquele valor*/
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
     
-    .principal div#div3{
+    div#div3{
         text-align: center;
         margin: auto;
         display: block;
+    }
+
+    .principal {
+        text-align: center;
     }
 
 
@@ -32,20 +36,11 @@ min-width: de cima até aquele valor*/
         margin-top: 10px;
     }  
 
-    div#div1 {
-        padding-right: 180px;
-    }
-
-    div#div3 {
-        text-align: center;
-    }
-
-
     header img {
-        width: 22px;
+        width: 24px;
         margin-top: 15px;
     }
-    
+
     hr {
         width: 450px;
         margin: auto;
@@ -56,30 +51,26 @@ min-width: de cima até aquele valor*/
     header p {
         font-size: 1.0em;
         text-align: justify;
+        width: 200px;
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 40px;
-        padding-left: 40px;
-        width: 380px;
     }
 
     h2 {
-        font-size: 1.9em;
+        font-size: 2.3em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
-        padding-left: 30px;
-        padding-right: 0px;
         padding-top: 0px;
     }
 
     header h1 {
-        font-size: 2.6em;
+        font-size: 2.3em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif; 
         text-align: center;
         padding-top: 20px;
-        padding-right: 2px;
     }
 
     h3 {
@@ -134,7 +125,7 @@ min-width: de cima até aquele valor*/
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif; 
         text-align: center;
-        padding-top: 135px;
+        padding-top: 155px;
         padding-left: 70px;
         padding-right: 11px;
     }
