--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,7 +48,7 @@
     }  
     
     header h1 {
-        font-size: 1.7em;
+        font-size: 1.5em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif; 
         text-align: center;
@@ -66,7 +66,7 @@
     }
     
     h2 {
-        font-size:1.7em;
+        font-size:1.5em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
@@ -79,6 +79,8 @@
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 20px;
+        padding-left: 80px;
+        width: 250px;
     }
     
     h3 {
