--- a/mq.style.css
+++ b/mq.style.css
@@ -6,15 +6,15 @@ min-width: de cima até aquele valor*/
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
-    
-    div#div3{
+@media screen and (max-width:480px) {
+    .principal div#div3{
         text-align: center;
         margin: auto;
         display: block;
+        width: 360px;
     }
 
-    .principal {
+    #div1 {
         text-align: center;
     }
 
@@ -36,11 +36,94 @@ min-width: de cima até aquele valor*/
         margin-top: 10px;
     }  
 
+
     header img {
-        width: 24px;
+        width: 22px;
         margin-top: 15px;
     }
+    
+    hr {
+        width: 320px;
+        margin: auto;
+        display: block;
+        margin-top: 120px;
+    }
 
+    header p {
+        font-size: 0.9em;
+        text-align: justify;
+        color: rgba(255, 255, 255, 0.966);
+        font-family: 'Barlow', sans-serif;
+        padding-top: 40px;
+        width: 210px;
+    }
+
+    h2 {
+        font-size: 1.8em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlow', sans-serif;  
+        text-align: center;
+        padding-top: 0px;
+    }
+
+    header #div3 h1 {
+        font-size: 1.8em;
+        color: rgba(255, 255, 255, 0.916);
+        font-family: 'Barlw', sans-serif; 
+        text-align: center;
+        padding-top: 20px;
+        
+    }
+
+    h3 {
+        color: white;
+        font-size: 1.4em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(255, 255, 255, 0.916);
+        text-align: center;
+        padding-top: 40px;
+        
+    }
+}
+
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+    
+    .principal div#div3{
+        text-align: center;
+        margin: auto;
+        display: block;
+        width: 400px;
+    }
+
+    #div1 {
+        text-align: center;
+    }
+
+
+    header .principal h1.h1 {
+        padding-top: 40px;
+        padding-bottom: 10px;
+        font-size: 2.4rem;
+    }
+
+    header img#imgprincipal {
+        width: 260px;
+        height: 280px;
+        z-index: -1;
+        margin: auto;
+        display: block;
+        border: 2px solid lightgreen;
+        border-radius: 5px;
+        margin-top: 10px;
+    }  
+
+
+    header img {
+        width: 22px;
+        margin-top: 15px;
+    }
+    
     hr {
         width: 450px;
         margin: auto;
@@ -51,26 +134,27 @@ min-width: de cima até aquele valor*/
     header p {
         font-size: 1.0em;
         text-align: justify;
-        width: 200px;
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
         padding-top: 40px;
     }
 
     h2 {
-        font-size: 2.3em;
+        font-size: 1.8em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
+        padding-right: 0px;
         padding-top: 0px;
     }
 
     header h1 {
-        font-size: 2.3em;
+        font-size: 3.5em;
         color: rgba(255, 255, 255, 0.916);
-        font-family: 'Barlow', sans-serif; 
+        font-family: 'Barlw', sans-serif; 
         text-align: center;
         padding-top: 20px;
+        padding-right: 0px;
     }
 
     h3 {
@@ -85,7 +169,7 @@ min-width: de cima até aquele valor*/
 }   
 
 
-@media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 926px){
     div.principal {
         display: flex;
     }
@@ -97,78 +181,83 @@ min-width: de cima até aquele valor*/
     #div1 {
         display: flex;
         position: absolute;
-        left: 60px;
-        top: 143px;
+        left: 55px;
+        top: 85px;
     }
 
 
     header #div1 img {
-        width: 33px;
+        width: 30px;
         padding-top: 20px;
         padding-left: 20px;
         margin-right: 5px;
     }
 
     header img#imgprincipal {
-        width: 300px;
-        height: 520px;
+        width: 250px;
+        height: 430px;
         z-index: -1;
+        margin: auto;
+        display: block;
         position: absolute;
         border-radius: 20px; 
-        top: 140px;
+        top: 85px;
         left: 50px;
     }
 
 
-    header h1 {
-        font-size: 2.9em;
+    header #div3 h1 {
+        font-size: 2.6em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif; 
         text-align: center;
-        padding-top: 155px;
-        padding-left: 70px;
-        padding-right: 11px;
+        padding-left: 25px;
     }
 
     header .principal h1.h1 {
-        padding-top: 50px;
-        padding-left: 55px;
+        padding-top: 30px;
+        padding-left: 60px;
         padding-bottom: 88px;
-        font-size: 3.3rem;
+        font-size: 2.7rem;
     }
+
+    #div3 {
+        padding-top: 90px;
+        text-align: left;
+    }
+
     
     h2 {
-        font-size: 2.5em;
+        font-size: 2.4em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
-        text-align: right;
-        padding-right: 20px;
-        padding-top: 2px;
+        text-align: center;
+        padding-left: 35px;
     }
     
     header p {
-        font-size: 1.4em;
+        font-size: 0.9em;
         text-align: right;
         color: rgb(255, 255, 255);
         font-family: 'Barlow', sans-serif;
         padding-top: 20px;
-        padding-left: 70px;
-        width: 335px;
+        padding-left: 90px;
+        width: 375px;
     }
     
     h3 {
-        font-size: 1.5em;
+        font-size: 1.0em;
         font-family: 'Barlow', sans-serif;
         color: rgba(255, 255, 255, 0.916);
         padding-top: 30px;
-        padding-right: 125px;
+        padding-right: 180px;
     }
 
     hr {
         width: 700px;
         margin: auto;
         display: block;
-        margin-top: 120px;
+        margin-top: 170px;
     }
 
     div#skills{
@@ -306,10 +395,10 @@ min-width: de cima até aquele valor*/
         padding-top: 35px;
         padding-right: 10px;
     }
-
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) {
+
+@media screen and (min-width: 926px) and (max-width: 1200px) {
     div.principal {
         display: flex;
     }
@@ -321,83 +410,89 @@ min-width: de cima até aquele valor*/
     #div1 {
         display: flex;
         position: absolute;
-        left: 100px;
-        top: 185px;
+        left: 85px;
+        top: 110px;
     }
 
 
     header #div1 img {
-        width: 40px;
+        width: 29px;
         padding-top: 20px;
         padding-left: 20px;
         margin-right: 5px;
     }
 
     header img#imgprincipal {
-        width: 340px;
-        height: 580px;
+        width: 260px;
+        height: 450px;
         z-index: -1;
+        margin: auto;
+        display: block;
         position: absolute;
         border-radius: 20px; 
-        top: 180px;
-        left: 90px;
+        top: 120px;
+        left: 80px;
     }
 
 
-    header h1 {
-        font-size: 3.4em;
+    header #div3 h1 {
+        font-size: 3.1em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif; 
         text-align: center;
-        padding-top: 190px;
-        padding-left: 130px;
+        padding-left: 85px;
     }
 
     header .principal h1.h1 {
-        padding-top: 50px;
+        padding-top: 30px;
         padding-left: 85px;
         padding-bottom: 88px;
-        font-size: 3.5rem;
+        font-size: 2.8rem;
     }
+
+    #div3 {
+        padding-top: 90px;
+        text-align: center;
+    }
+
     
     h2 {
         font-size: 3.1em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
-        text-align: right;
-        padding-left: 148px;
-        padding-top: 2px;
+        text-align: center;
+        padding-left: 135px;
     }
     
     header p {
-        font-size: 1.6em;
+        font-size: 1.1em;
         text-align: right;
         color: rgb(255, 255, 255);
         font-family: 'Barlow', sans-serif;
         padding-top: 20px;
-        padding-left: 150px;
-        width: 400px;
+        padding-left: 137px;
+        width: 375px;
     }
     
     h3 {
-        font-size: 1.4em;
+        font-size: 1.2em;
         font-family: 'Barlow', sans-serif;
         color: rgba(255, 255, 255, 0.916);
         padding-top: 30px;
-        padding-right: 125px;
+        padding-right: 158px;
     }
 
     hr {
-        width: 890px;
+        width: 850px;
         margin: auto;
         display: block;
-        margin-top: 120px;
+        margin-top: 170px;
     }
 
     div#skills{
         display: grid;
         margin-top: 40px;
-        grid-template-columns: 200px 200px 170px;
+        grid-template-columns: 220px 200px 170px;
         grid-auto-rows: 200px 180px;
         justify-content: space-evenly;
     }
@@ -416,7 +511,7 @@ min-width: de cima até aquele valor*/
     div#tabela2 {
         display: grid;
         justify-content: space-evenly;
-        grid-template-columns: 550px 160px;
+        grid-template-columns: 580px 160px;
         grid-auto-rows: 180px 180px;
     }
 
@@ -437,14 +532,14 @@ min-width: de cima até aquele valor*/
 
     aside div#imagens h1 {
         color: rgba(255, 255, 255, 0.93);
-        font-size: 1.4em;
+        font-size: 1.2em;
         padding: 10px;
     }
         
 
     aside div#imagens p {
         color: rgba(255, 255, 255, 0.797);
-        font-size: 1.3em;
+        font-size: 1.0em;
         padding: 5px;
         padding-bottom: 80px;
         text-align: center;
@@ -455,8 +550,8 @@ min-width: de cima até aquele valor*/
     }
     
     img#linha1, img#linha2, img#linha3, img#linha4 {
-        height: 300px;
-        width: 400px;
+        height: 200px;
+        width: 300px;
         border-radius: 10px;
         border: 2px solid lightgreen;
         margin: auto;
@@ -496,7 +591,7 @@ min-width: de cima até aquele valor*/
         height: 300px;
         margin-left: 20px;
         padding-top: 10px;
-        padding-right: 95px;
+        padding-right: 40px;
     }
 
 
@@ -511,236 +606,11 @@ min-width: de cima até aquele valor*/
     
     footer #geral p {
         color: rgba(255, 255, 255, 0.907);
-        font-size:  1.7rem;
+        font-size:  1.5rem;
         font-family: 'Barlow', sans-serif;
         text-align: left;
         padding-left: 5px;
-        width: 320px;
-    }
-
-    #img img {
-        width: 38px;
-        padding: 0px;
-        margin-left: 10px;
-    } 
-
-    .imgs {
-        text-align: left;
-        padding-top: 35px;
-        padding-right: 10px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    div.principal {
-        display: flex;
-    }
-
-    div.principal p {
-        text-align: justify;
-    }
-
-    #div1 {
-        display: flex;
-        position: absolute;
-        left: 215px;
-        top: 190px;
-    }
-
-
-    header #div1 img {
-        width: 36px;
-        padding-top: 20px;
-        padding-left: 20px;
-        margin-right: 5px;
-    }
-
-    header img#imgprincipal {
-        width: 360px;
-        height: 520px;
-        z-index: -1;
-        position: absolute;
-        border-radius: 20px; 
-        top: 180px;
-        left: 210px;
-    }
-
-
-    header h1 {
-        font-size: 4.2em;
-        color: rgba(255, 255, 255, 0.916);
-        font-family: 'Barlow', sans-serif; 
-        text-align: center;
-        padding-top: 190px;
-        padding-left: 226px;
-    }
-
-    header .principal h1.h1 {
-        padding-top: 80px;
-        padding-left: 215px;
-        padding-bottom: 65px;
-        font-size: 3.5rem;
-    }
-    
-    h2 {
-        font-size: 3.9em;
-        color: rgba(255, 255, 255, 0.916);
-        font-family: 'Barlow', sans-serif;  
-        text-align: right;
-        padding-right: 37px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    
-    header p {
-        font-size: 1.5em;
-        text-align: right;
-        color: rgb(255, 255, 255);
-        font-family: 'Barlow', sans-serif;
-        padding-top: 20px;
-        padding-left: 290px;
-        padding-right: 60px;
-        width: 500px;
-    }
-    
-    h3 {
-        font-size: 1.8em;
-        font-family: 'Barlow', sans-serif;
-        color: rgba(255, 255, 255, 0.916);
-        padding-top: 45px;
-        padding-left: 0px;
-        padding-right: 85px;
-    }
-
-    hr {
-        width: 1150px;
-        margin: auto;
-        display: block;
-        margin-top: 170px;
-    }
-
-    div#skills{
-        display: grid;
-        margin-top: 40px;
-        grid-template-columns: 200px 200px 170px;
-        grid-auto-rows: 200px 180px;
-        justify-content: space-evenly;
-    }
-
-    div#skills h1 {
-        font-size: 2.1em;
-         color: rgba(255, 255, 255, 0.855);
-    }
-
-    div#skills p {
-        font-size: 1.2em;
-        font-family: 'Barlow', sans-serif;
-        color: rgba(185, 184, 184, 0.942);
-    }
-
-    div#tabela2 {
-        display: grid;
-        justify-content: space-evenly;
-        grid-template-columns: 850px 160px;
-        grid-auto-rows: 180px 180px;
-    }
-
-    div#tabela2 h1 {
-        font-size: 3.9rem;
-        color: rgba(255, 255, 255, 0.916);
-    }
-
-
-    b.b3 {
-        color: rgba(255, 255, 255, 0.916);
-        font-size: 1.5rem;    
-    }
-
-    #b {
-        padding-top: 65px;
-    }
-
-    aside div#imagens h1 {
-        color: rgba(255, 255, 255, 0.93);
-        font-size: 1.5em;
-        padding: 10px;
-    }
-        
-
-    aside div#imagens p {
-        color: rgba(255, 255, 255, 0.797);
-        font-size: 1.4em;
-        padding: 5px;
-        padding-bottom: 80px;
-        text-align: center;
-    }
-
-    p.linha5, p.linha6 , p.linha7, p.linha8 {
-        padding-bottom: 20px;
-    }
-    
-    img#linha1, img#linha2, img#linha3, img#linha4 {
-        height: 300px;
-        width: 400px;
-        border-radius: 10px;
-        border: 2px solid lightgreen;
-        margin: auto;
-        display: block;
-    }
-
-    .linha1, .linha2 {
-        text-align: center;
-        margin: auto;
-        display: block;    
-}
-
-    #imagens {
-        display: flex;
-        text-align: center;
-        margin: auto;
-    }
-
-    #img {
-        text-align: center;
-        margin: auto;
-        display: block;
-    }
-
-    div#geral {
-        text-align: left;
-    }
-
-    footer {
-        background-color: rgb(48, 47, 47);
-        padding: 60px;
-    }
-
-    .footer .imgextra {
-        border-radius: 30px;
-        width: 250px;
-        height: 280px;
-        margin-left: 10px;
-        padding-top: 10px;
-        padding-right: 180px;
-    }
-
-
-    footer h1 {
-        color: rgba(247, 247, 247, 0.966);
-        font-size: 3.8em;
-        font-family: 'Barlow', sans-serif;
-        margin: 0px;
-        text-align: left;
-        padding-bottom: 35px;
-    }
-    
-    footer #geral p {
-        color: rgba(255, 255, 255, 0.907);
-        font-size:  1.7rem;
-        font-family: 'Barlow', sans-serif;
-        text-align: left;
-        padding-left: 5px;
-        width: 700px;
+        width: 300px;
     }
 
     #img img {
