--- a/mq.style.css
+++ b/mq.style.css
@@ -14,8 +14,17 @@ min-width: de cima até aquele valor*/
         width: 360px;
     }
 
+    .principal {
+        text-align: center;
+        margin: auto;
+        display: block;
+    }
+
     #div1 {
         text-align: center;
+        position: absolute;
+        top: 740px;
+        left: 150px;
     }
 
 
@@ -25,21 +34,27 @@ min-width: de cima até aquele valor*/
         font-size: 2.4rem;
     }
 
-    header img#imgprincipal {
-        width: 260px;
-        height: 280px;
+    header img#ftextra {
+        width: 170px;
+        height: 170px;
         z-index: -1;
         margin: auto;
         display: block;
         border: 2px solid lightgreen;
-        border-radius: 5px;
+        border-radius: 50%;
         margin-top: 10px;
     }  
 
+    header picture #imgprincipal {
+        display: none;
+    }
 
-    header img {
-        width: 22px;
+
+    header #div1 img {
+        width: 23px;
         margin-top: 15px;
+        padding: 5px;
+        margin-right: 5px;
     }
     
     hr {
@@ -103,25 +118,30 @@ min-width: de cima até aquele valor*/
 
     header .principal h1.h1 {
         padding-top: 40px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
         font-size: 2.4rem;
     }
 
-    header img#imgprincipal {
-        width: 260px;
-        height: 280px;
+    header picture img#ftextra {
+        width: 190px;
+        height: 190px;
         z-index: -1;
         margin: auto;
         display: block;
         border: 2px solid lightgreen;
-        border-radius: 5px;
+        border-radius: 10px;
         margin-top: 10px;
-    }  
+    } 
+    
+    header picture img#imgprincipal {
+        display: none;
+    }
 
 
     header img {
-        width: 22px;
-        margin-top: 15px;
+        width: 28px;
+        margin-top: 0px;
+        margin-bottom: 10px;
     }
     
     hr {
@@ -165,6 +185,8 @@ min-width: de cima até aquele valor*/
         text-align: center;
         padding-top: 40px;
     }
+
+    
 
 }   
 
@@ -395,6 +417,10 @@ min-width: de cima até aquele valor*/
         padding-top: 35px;
         padding-right: 10px;
     }
+
+    #ftextra {
+        display: none;
+    }
 }
 
 
@@ -623,6 +649,10 @@ min-width: de cima até aquele valor*/
         text-align: left;
         padding-top: 35px;
         padding-right: 10px;
+    }
+
+    #ftextra {
+        display: none;
     }
 }
 
@@ -853,6 +883,10 @@ min-width: de cima até aquele valor*/
         text-align: left;
         padding-top: 35px;
         padding-right: 10px;
+    }
+
+    #ftextra {
+        display: none;
     }
 }
 
@@ -1086,5 +1120,9 @@ min-width: de cima até aquele valor*/
         text-align: left;
         padding-top: 35px;
         padding-right: 10px;
+    }
+
+    #ftextra {
+        display: none;
     }
 }
