--- a/mq.style.css
+++ b/mq.style.css
@@ -103,6 +103,25 @@ min-width: de cima até aquele valor*/
         padding-top: 40px;
         
     }
+
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 150px 120px;
+        grid-auto-rows: 100px 100px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+         font-size: 1.4em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 0.7em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
 }
 
 
@@ -123,18 +142,18 @@ min-width: de cima até aquele valor*/
     header .principal h1.h1 {
         padding-top: 40px;
         padding-bottom: 5px;
-        font-size: 2.4rem;
+        font-size: 3.0rem;
     }
 
     header picture img#ftextra {
-        width: 190px;
-        height: 190px;
+        width: 210px;
+        height: 210px;
         z-index: -1;
         margin: auto;
         display: block;
         border: 2px solid lightgreen;
         border-radius: 10px;
-        margin-top: 10px;
+        margin-top: 20px;
     } 
     
     header picture img#imgprincipal {
@@ -156,7 +175,7 @@ min-width: de cima até aquele valor*/
     }
 
     header p {
-        font-size: 1.0em;
+        font-size: 1.2em;
         text-align: justify;
         color: rgba(255, 255, 255, 0.966);
         font-family: 'Barlow', sans-serif;
@@ -164,7 +183,7 @@ min-width: de cima até aquele valor*/
     }
 
     h2 {
-        font-size: 1.8em;
+        font-size: 2.5em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlow', sans-serif;  
         text-align: center;
@@ -172,8 +191,8 @@ min-width: de cima até aquele valor*/
         padding-top: 0px;
     }
 
-    header h1 {
-        font-size: 3.5em;
+    header #div3 h1 {
+        font-size: 2.5em;
         color: rgba(255, 255, 255, 0.916);
         font-family: 'Barlw', sans-serif; 
         text-align: center;
@@ -190,6 +209,24 @@ min-width: de cima até aquele valor*/
         padding-top: 40px;
     }
 
+    div#skills{
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 150px 120px;
+        grid-auto-rows: 100px 100px;
+        justify-content: space-evenly;
+    }
+
+    div#skills h1 {
+         font-size: 1.4em;
+         color: rgba(255, 255, 255, 0.855);
+    }
+
+    div#skills p {
+        font-size: 0.7em;
+        font-family: 'Barlow', sans-serif;
+        color: rgba(185, 184, 184, 0.942);
+    }
     
 
 }   
